Gets wrapping correct

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -27,6 +27,7 @@ html {
         }
 
         #wrapper {
+            height: 100%;
             padding-left: 300px;
             > .container-fluid {
                 height: 100%;
